--- a/.github/workflows/Build_X86_64[Docker].yml
+++ b/.github/workflows/Build_X86_64[Docker].yml
@@ -61,26 +61,26 @@ jobs:
         git clone --depth 1 $REPO_URL_Lede -b $REPO_BRANCH_Lede $REPO_PATH_Lede
         cd $REPO_PATH_Lede
         echo "commitHash_x86_64_docker=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-        cd 
-        
+        cd
+
     - name: Show Commit Head and Combination Heads
       id: combHeader
       run: |
         echo "commitHash_x86_64_docker: ${{ steps.getHash.outputs.commitHash_x86_64_docker }}"
-        
+
     - name: Compare Commit Hash
       id: cacheHash
       uses: actions/cache@main
       with:
         path: .commitHash_x86_64_docker
         key: HEAD-${{ steps.getHash.outputs.commitHash_x86_64_docker }}
-        
+
     - name: Set output for next job
       id: outputunifreq
       if: steps.cacheHash.outputs.cache-hit == 'true'
       run: |
         echo "unifreq=hello" >> $GITHUB_OUTPUT
-        
+
     - name: Save New Commit Hash
       if: steps.cacheHash.outputs.cache-hit != 'true'
       run: |
@@ -113,7 +113,7 @@ jobs:
         echo "硬盘详情："
         echo " 系统空间       类型   总数  已用  可用  使用率"
         df -Th
-        
+
     - name: Initialization environment
       env:
         DEBIAN_FRONTEND: noninteractive
@@ -127,9 +127,9 @@ jobs:
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
-        sudo chown $USER:$GROUPS /workdir        
+        sudo chown $USER:$GROUPS /workdir
         df -Th
-        
+
     - name: Clone source code
       working-directory: /workdir
       run: |
@@ -148,7 +148,7 @@ jobs:
         echo "DATE=$(date "+%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
         echo "TAG=$(date "+%Y%m%d")" >> $GITHUB_ENV
         echo "start=$(date +%s)" >> $GITHUB_ENV
-        
+
     - name: Load custom feeds
       run: |
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
@@ -198,12 +198,12 @@ jobs:
         sed -i '/Transparent_Proxy/d' Plug-in > /dev/null 2>&1
         sed -i 's/=y/\ /g' Plug-in
         awk '$0=NR$0' Plug-in > Plug-2
-        awk '{print "	" $0}' Plug-2 > Plug-in    
+        awk '{print "	" $0}' Plug-2 > Plug-in
         echo
         echo
         echo "	      已选插件列表"
         cat Plug-in
-        rm -rf {Plug-in,Plug-2}  
+        rm -rf {Plug-in,Plug-2}
         echo
         echo "=========================================="
         echo
@@ -339,6 +339,23 @@ jobs:
           hash: ${{ env.hash }}
           ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
           📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}6_${{ env.KERNEL }}
+    - name: Telegram or Push notification
+      run: |
+        MSG="
+        ♨️ 🐳${{ env.FILE_NAME }}_${{ env.KERNEL }}[Docker]编译完成
+        开始时间：${{ env.DATE }}
+        完成时间：${{ env.DATE1 }}
+        编译耗时：${{ env.time }}
+        🎈🎈🎈 更新信息 🎈🎈🎈
+        作者: ${{ env.author }}
+        时间: ${{ env.date }}
+        内容: ${{ env.commit }}
+        hash: ${{ env.hash }}
+        ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
+        📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}6_${{ env.KERNEL }}
+        "
+        curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_TO }}&text=${MSG}"
+        curl "http://www.pushplus.plus/send?token=${{ secrets.PUSH_PLUS_TOKEN }}" -d "title=${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成&content=${MSG}"
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
   Build_x86_64_515:
     needs: [Checka]   
@@ -452,12 +469,12 @@ jobs:
         sed -i '/Transparent_Proxy/d' Plug-in > /dev/null 2>&1
         sed -i 's/=y/\ /g' Plug-in
         awk '$0=NR$0' Plug-in > Plug-2
-        awk '{print "	" $0}' Plug-2 > Plug-in    
+        awk '{print "	" $0}' Plug-2 > Plug-in
         echo
         echo
         echo "	      已选插件列表"
         cat Plug-in
-        rm -rf {Plug-in,Plug-2}  
+        rm -rf {Plug-in,Plug-2}
         echo
         echo "=========================================="
         echo
@@ -576,20 +593,20 @@ jobs:
         HMS=`echo ${hour}:${min}:${sec}`
         echo "time=$HMS" >> $GITHUB_ENV
 
-    - name: Telegram notification upload success
-      uses: appleboy/telegram-action@master
-      with:
-        to: ${{ secrets.TELEGRAM_TO }}
-        token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: |
-          ♨️${{ env.FILE_NAME }}_${{ env.KERNEL }}[Docker]编译完成
-          开始时间：${{ env.DATE }}
-          完成时间：${{ env.DATE1 }}
-          编译耗时：${{ env.time }}
-          🎈🎈🎈 更新信息 🎈🎈🎈
-          作者: ${{ env.author }}
-          时间: ${{ env.date }}
-          内容: ${{ env.commit }}
-          hash: ${{ env.hash }}
-          ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
-          📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}6_${{ env.KERNEL }}
+    - name: Telegram or Push notification
+      run: |
+        MSG="
+        ♨️ 🐳${{ env.FILE_NAME }}_${{ env.KERNEL }}[Docker]编译完成
+        开始时间：${{ env.DATE }}
+        完成时间：${{ env.DATE1 }}
+        编译耗时：${{ env.time }}
+        🎈🎈🎈 更新信息 🎈🎈🎈
+        作者: ${{ env.author }}
+        时间: ${{ env.date }}
+        内容: ${{ env.commit }}
+        hash: ${{ env.hash }}
+        ✪ ✣ ✤ ✥ ✦ ❉ ❦ ❧ ❃ ❂ ❁ ❀
+        📍: https://github.com/Jejz168/OpenWrt/releases/tag/${{ env.TAG }}6_${{ env.KERNEL }}
+        "
+        curl "https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage" -d "chat_id=${{ secrets.TELEGRAM_TO }}&text=${MSG}"
+        curl "http://www.pushplus.plus/send?token=${{ secrets.PUSH_PLUS_TOKEN }}" -d "title=${{ env.FILE_NAME }}_${{ env.KERNEL }}编译完成&content=${MSG}"
