--- a/.github/workflows/Build_ARMv8.yml
+++ b/.github/workflows/Build_ARMv8.yml
@@ -77,7 +77,7 @@ jobs:
       run: |
         echo ${{ steps.getHash.outputs.commitHash_arm }} | tee .commitHash_arm
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
-  Build_armv8:
+  Build_ARMv8-ROOTFS:
     needs: [Checka]   
     if: ${{ needs.Checka.outputs.output != 'hello' || github.event.inputs.checkupdates == 'true'}}
     runs-on: ubuntu-22.04
@@ -235,6 +235,13 @@ jobs:
         mkdir -p ./artifact/buildinfo
         cp -rf openwrt/.config ./artifact/buildinfo/armv8.config
         cp -rf $(find openwrt/bin/targets/ -type f -name "*.buildinfo" -o -name "*.manifest") ./artifact/buildinfo/
+
+    - name: Clean up server space
+      if: steps.compile.outputs.status == 'success' && !cancelled()
+      run: |
+        cd openwrt/
+        rm -rf $(ls . | grep -v "^bin$" | xargs) 2>/dev/null
+        df -hT ${PWD}
         
     - name: Upload bin directory
       uses: actions/upload-artifact@main
@@ -309,7 +316,7 @@ jobs:
         curl "http://www.pushplus.plus/send?token=${{ secrets.PUSH_PLUS_TOKEN }}" -d "title=${{ env.FILE_NAME }}编译完成&content=${MSG}"
 # /////////////////////////////////////////////////////////////////////////////////////////////////////////
   Build_ARMv8_OpenWrt:
-    needs: [Build_armv8]
+    needs: [Build_ARMv8-ROOTFS]
     runs-on: ubuntu-22.04
 
     steps:
@@ -425,7 +432,7 @@ jobs:
 # //////////////////////////////////////////////////////////////////////////////////////////////
   Cleaning:
     if: ${{ always() }}
-    needs: [Checka,Build_armv8,Build_ARMv8_OpenWrt]
+    needs: [Checka,Build_ARMv8-ROOTFS,Build_ARMv8_OpenWrt]
     runs-on: ubuntu-latest
     steps:
     - name: Delete workflow runs
