--- a/x86/x86.config
+++ b/x86/x86.config
@@ -5114,6 +5114,7 @@ CONFIG_PACKAGE_luci-theme-design=y
 # 5. Protocols
 #
 # CONFIG_PACKAGE_luci-proto-3g is not set
+# CONFIG_PACKAGE_luci-proto-3x is not set
 CONFIG_PACKAGE_luci-proto-bonding=y
 # CONFIG_PACKAGE_luci-proto-ipip is not set
 CONFIG_PACKAGE_luci-proto-ipv6=y
