--- a/armv8/armv8.config
+++ b/armv8/armv8.config
@@ -5327,6 +5327,7 @@ CONFIG_PACKAGE_luci-theme-rosy=y
 # 5. Protocols
 #
 # CONFIG_PACKAGE_luci-proto-3g is not set
+# CONFIG_PACKAGE_luci-proto-3x is not set
 # CONFIG_PACKAGE_luci-proto-bonding is not set
 # CONFIG_PACKAGE_luci-proto-ipip is not set
 CONFIG_PACKAGE_luci-proto-ipv6=y
