--- a/.github/workflows/ARMv8-OpenWrt.yml
+++ b/.github/workflows/ARMv8-OpenWrt.yml
@@ -111,6 +111,7 @@ jobs:
         OPENWRT_ARMVIRT: https://github.com/Jejz168/OpenWrt/releases/download/ARMv8-ROOTFS/openwrt-armvirt-64-default-rootfs.tar.gz
         PACKAGE_SOC: ${{ github.event.inputs.openwrt_soc }}
         WHOAMI: Jejz
+        OPENWRT_VER: R23.3.3
         DISTRIB_REVISION: ${OPENWRT_VER} (By @Jejz build $(TZ=UTC-8 date "+%Y-%m-%d %H:%M"))
         KERNEL_REPO_URL: https://github.com/Jejz168/OpenWrt/tree/main/backup
         KERNEL_VERSION_NAME: ${{ github.event.inputs.kernel_version }}
