--- a/.github/workflows/Update synchronization checker.yml
+++ b/.github/workflows/Update synchronization checker.yml
@@ -32,10 +32,19 @@ jobs:
         pwd
         rm -rf ./backup/kernel
         mkdir -p ./backup/kernel
-        svn export https://github.com/ophub/kernel/trunk/pub/stable ./backup/kernel --force
+        #svn export https://github.com/ophub/kernel/trunk/pub/stable ./backup/kernel --force
         #svn export https://github.com/breakings/OpenWrt/trunk/opt/kernel ./backup/kernel --force
-        rm -rf ./backup/kernel/5.10.*
-        rm -rf ./backup/kernel/5.4.*
+        #rm -rf ./backup/kernel/5.10.*
+        #rm -rf ./backup/kernel/5.4.*
+
+    - name: Download kernel
+      uses: robinraju/release-downloader@main
+      with:
+        repository: "ophub/kernel"
+        latest: true
+        fileName: "*"
+        tarBall: true
+        out-file-path: ./backup/kernel
 
     - name: Download kernel
       uses: robinraju/release-downloader@main
