Update Update synchronization checker.yml

--- a/.github/workflows/Update synchronization checker.yml
+++ b/.github/workflows/Update synchronization checker.yml
@@ -58,8 +58,8 @@ jobs:
     - name: Release tar
       run: |
         cd ./backup/kernel
-       # find ./ -name *ophub*|xargs rm -rf
-     #   find ./ -name *compile*|xargs rm -rf
+        find ./ -name *ophub*|xargs rm -rf
+        find ./ -name *compile*|xargs rm -rf
         ls ./*.tar.gz |xargs -n1 tar xzvf
         rm -rf ./*gz
         
