Update Update synchronization checker.yml

--- a/.github/workflows/Update synchronization checker.yml
+++ b/.github/workflows/Update synchronization checker.yml
@@ -45,7 +45,13 @@ jobs:
         fileName: "*"
         tarBall: true
         out-file-path: ./backup/kernel
-
+        
+    - name: Release tar
+      run: |
+        cd ./backup/kernel
+        rm -rf ./5.4*gz
+        rm -rf ./5.10*gz
+        
   #  - name: Download kernel
    #   uses: robinraju/release-downloader@main
    #   with:
