Update Update synchronization checker.yml

--- a/.github/workflows/Update synchronization checker.yml
+++ b/.github/workflows/Update synchronization checker.yml
@@ -67,8 +67,8 @@ jobs:
         cd ./backup/kernel
         #find ./ -name *ophub*|xargs rm -rf
         #find ./ -name *compile*|xargs rm -rf
-        ls ./*.tar.gz |xargs -n1 tar xzvf
-        rm -rf ./*gz
+        #ls ./*.tar.gz |xargs -n1 tar xzvf
+        #rm -rf ./*gz
         
     - name: Commit
       run: |
