--- a/.github/workflows/Update synchronization checker.yml
+++ b/.github/workflows/Update synchronization checker.yml
@@ -33,40 +33,24 @@ jobs:
         rm -rf ./backup/kernel
         mkdir -p ./backup/kernel
         #svn export https://github.com/ophub/kernel/trunk/pub/stable ./backup/kernel --force
-        #svn export https://github.com/breakings/OpenWrt/trunk/opt/kernel ./backup/kernel --force
-        #rm -rf ./backup/kernel/5.10.*
-        #rm -rf ./backup/kernel/5.4.*
-
+        svn export https://github.com/breakings/OpenWrt/trunk/opt/kernel ./backup/kernel --force
+        rm -rf ./backup/kernel/5.10.*
+        rm -rf ./backup/kernel/5.4.*
+        
     - name: Download kernel
       uses: robinraju/release-downloader@main
       with:
-        repository: "ophub/kernel"
-        tag: "kernel_stable"
+        repository: "Jejz168/compile-kernel"
         latest: true
-        fileName: "5.15.*"
+        fileName: "*"
         tarBall: true
         out-file-path: ./backup/kernel
-        
-    - name: Release tar
-      run: |
-        cd ./backup/kernel
-        rm -rf ./5.4.*
-        rm -rf ./5.10.*
-        
-  #  - name: Download kernel
-   #   uses: robinraju/release-downloader@main
-   #   with:
-   #     repository: "Jejz168/compile-kernel"
-  #      latest: true
-    #    fileName: "*"
-  #      tarBall: true
-   #     out-file-path: ./backup/kernel
 
     - name: Release tar
       run: |
         cd ./backup/kernel
-        find ./ -name *stable*|xargs rm -rf
-        #find ./ -name *compile*|xargs rm -rf
+        #find ./ -name *stable*|xargs rm -rf
+        find ./ -name *compile*|xargs rm -rf
         ls ./*.tar.gz |xargs -n1 tar xzvf
         rm -rf ./*gz
         
