--- a/.github/workflows/Update synchronization checker.yml
+++ b/.github/workflows/Update synchronization checker.yml
@@ -40,10 +40,10 @@ jobs:
     - name: Download kernel
       uses: robinraju/release-downloader@main
       with:
-        repository: "ophub/kernel"
-        tag: "kernel_stable"
+        repository: "Jejz168/compile-kernel"
+        #tag: "kernel_stable"
         latest: true
-        fileName: "5.4.*"
+        fileName: "*"
         tarBall: true
         out-file-path: ./backup/kernel
 
