--- a/.github/workflows/Update synchronization checker.yml
+++ b/.github/workflows/Update synchronization checker.yml
@@ -33,9 +33,9 @@ jobs:
         rm -rf ./backup/kernel
         mkdir -p ./backup/kernel
         #svn export https://github.com/ophub/kernel/trunk/pub/stable ./backup/kernel --force
-        svn export https://github.com/breakings/OpenWrt/trunk/opt/kernel ./backup/kernel --force
-        rm -rf ./backup/kernel/5.10.*
-        rm -rf ./backup/kernel/5.4.*
+        #svn export https://github.com/breakings/OpenWrt/trunk/opt/kernel ./backup/kernel --force
+        #rm -rf ./backup/kernel/5.10.*
+        #rm -rf ./backup/kernel/5.4.*
         
     - name: Download kernel
       uses: robinraju/release-downloader@main
@@ -46,7 +46,17 @@ jobs:
         fileName: "*"
         tarBall: true
         out-file-path: ./backup/kernel
-
+        
+    - name: Download kernel
+      uses: robinraju/release-downloader@main
+      with:
+        repository: "Jejz168/compile-kernel"
+        tag: "Manual_upload"
+        latest: true
+        fileName: "*"
+        tarBall: true
+        out-file-path: ./backup/kernel
+        
     - name: Release tar
       run: |
         cd ./backup/kernel
