--- a/.github/workflows/Update synchronization checker.yml
+++ b/.github/workflows/Update synchronization checker.yml
@@ -33,20 +33,30 @@ jobs:
         rm -rf ./backup/kernel
         mkdir -p ./backup/kernel
         #svn export https://github.com/ophub/kernel/trunk/pub/stable ./backup/kernel --force
-        svn export https://github.com/breakings/OpenWrt/trunk/opt/kernel ./backup/kernel --force
-        rm -rf ./backup/kernel/5.10.*
-        rm -rf ./backup/kernel/5.4.*
+        #svn export https://github.com/breakings/OpenWrt/trunk/opt/kernel ./backup/kernel --force
+        #rm -rf ./backup/kernel/5.10.*
+        #rm -rf ./backup/kernel/5.4.*
         
-    - name: Download kernel
+    - name: Download kernel5.4/5.15
       uses: robinraju/release-downloader@main
       with:
         repository: "Jejz168/compile-kernel"
         tag: "kernel_stable"
-        latest: true
+        #latest: true
         fileName: "*"
         tarBall: true
         out-file-path: ./backup/kernel
-
+        
+    - name: Download kernel5.15
+      uses: robinraju/release-downloader@main
+      with:
+        repository: "Jejz168/compile-kernel"
+        tag: "kernel_Stable"
+        #latest: true
+        fileName: "*"
+        tarBall: true
+        out-file-path: ./backup/kernel
+        
     - name: Release tar
       run: |
         cd ./backup/kernel
