--- a/.github/workflows/ARMv8-OpenWrt.yml
+++ b/.github/workflows/ARMv8-OpenWrt.yml
@@ -33,6 +33,15 @@ on:
           - s905w
           - s905
           - s905l3a
+      kernel_download:
+        description: "Select kernel download"
+        required: false
+        default: "Jejz168/compile-kernel"
+        type: choice
+        options:
+          - Jejz168/compile-kernel
+          - breakings/OpenWrt
+          - ophub/kernel/
       kernel_version:
         description: "Select kernel version"
         required: false
@@ -113,7 +122,7 @@ jobs:
         WHOAMI: Jejz
         OPENWRT_VER: R23.3.3
         DISTRIB_REVISION: ${OPENWRT_VER} (By @Jejz build $(TZ=UTC-8 date "+%Y-%m-%d %H:%M"))
-        KERNEL_REPO_URL: https://github.com/Jejz168/compile-kernel/releases/tag/kernel_stable
+        KERNEL_REPO_URL: https://github.com/${{ github.event.inputs.kernel_download }}/releases/tag/kernel_stable
         KERNEL_VERSION_NAME: ${{ github.event.inputs.kernel_version }}
         KERNEL_AUTO_LATEST: true
         GZIP_IMGS: .gz
