--- a/.github/workflows/ARMv8-OpenWrt.yml
+++ b/.github/workflows/ARMv8-OpenWrt.yml
@@ -41,7 +41,7 @@ on:
         options:
           - Jejz168/compile-kernel
           - breakings/OpenWrt
-          - ophub/kernel/
+          - ophub/kernel
       kernel_version:
         description: "Select kernel version"
         required: false
