--- a/.github/workflows/ARMv8-OpenWrt.yml
+++ b/.github/workflows/ARMv8-OpenWrt.yml
@@ -50,12 +50,17 @@ on:
         options:
           - 5.4.228_5.10.161_5.15.100_6.1.8
           - 5.4.228_5.10.161
+          - 5.4.228_5.15.100
           - 5.10.161_5.15.100
           - 5.15.100_6.1.8
           - 5.4.228
           - 5.10.161
           - 5.15.100
           - 6.1.8
+      openwrt_version:
+        description: "Set the openwrt version"
+        required: false
+        default: "R23.4.1"
   #schedule:
     #- cron: '45 22 * * *'
 
@@ -120,7 +125,7 @@ jobs:
         OPENWRT_ARMVIRT: https://github.com/Jejz168/OpenWrt/releases/download/ARMv8-ROOTFS/openwrt-armvirt-64-default-rootfs.tar.gz
         PACKAGE_SOC: ${{ github.event.inputs.openwrt_soc }}
         WHOAMI: Jejz
-        OPENWRT_VER: R23.4.1
+        OPENWRT_VER: ${{ github.event.inputs.openwrt_version }}
         DISTRIB_REVISION: ${OPENWRT_VER} (By @Jejz build $(TZ=UTC-8 date "+%Y-%m-%d %H:%M"))
         KERNEL_REPO_URL: https://github.com/${{ github.event.inputs.kernel_download }}/releases/tag/kernel_stable
         KERNEL_VERSION_NAME: ${{ github.event.inputs.kernel_version }}
