--- a/.github/workflows/Build_ARMv8.yml
+++ b/.github/workflows/Build_ARMv8.yml
@@ -18,6 +18,25 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
+      kernel_version:
+        description: "Select kernel version"
+        required: false
+        default: "5.4.228_5.10.161_5.15.100_6.1.8"
+        type: choice
+        options:
+          - 5.4.228_5.10.161_5.15.100_6.1.8
+          - 5.4.228_5.10.161
+          - 5.4.228_5.15.100
+          - 5.10.161_5.15.100
+          - 5.15.100_6.1.8
+          - 5.4.228
+          - 5.10.161
+          - 5.15.100
+          - 6.1.8
+      openwrt_version:
+        description: "Set the openwrt version"
+        required: false
+        default: "R23.4.1"
   #schedule:
    # - cron: 16 7,20 * * *
 
@@ -371,9 +390,10 @@ jobs:
         OPENWRT_ARMVIRT: https://github.com/Jejz168/OpenWrt/releases/download/ARMv8-ROOTFS/openwrt-armvirt-64-default-rootfs.tar.gz
         PACKAGE_SOC: s905d_s905x3
         WHOAMI: Jejz
+        OPENWRT_VER: ${{ github.event.inputs.openwrt_version }}
         DISTRIB_REVISION: ${OPENWRT_VER} (By @Jejz build $(TZ=UTC-8 date "+%Y-%m-%d %H:%M"))
         KERNEL_REPO_URL: https://github.com/Jejz168/compile-kernel/releases/tag/kernel_stable
-        KERNEL_VERSION_NAME: 5.4.228_5.10.161_5.15.100_6.1.8
+        KERNEL_VERSION_NAME: ${{ github.event.inputs.kernel_version }}
         KERNEL_AUTO_LATEST: true
         GZIP_IMGS: .gz
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
